# homework_c_2sem

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  input.csv  main.c  output.txt
.cache/clangd/index/: main.c.4ED7CF85ABFFB346.idx  readcsv.c.B9A487499A742C93.idx  readcsv.h.C5B5B120C25D4745.idx  tests.c.3C988B280A6927E7.idx
src/task1/: main.c  readcsv.c  readcsv.h  tests.c
src/task2/: CMakeLists.txt  Report.md  avl.c  avl.h  benchmarks.c  interface.c  list.c  list.h  main.c  test.c
src/task3/: expansion.c  expansion.h  main.c  tests.c
